--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.0",
     "lasso": "^3.3.1",
     "lasso-babel-transform": "^3.0.0",
+    "lasso-cli": "^2.0.11",
     "lasso-marko": "^2.4.8",
     "lasso-sass": "^3.0.0",
     "sass": "^1.23.0"
