--- a/package.json
+++ b/package.json
@@ -4,19 +4,24 @@
   "description": "Simple weather app, developed with Marco and OpenWeather API",
   "main": "app.js",
   "scripts": {
-    "build": "lasso --main app.js --inject-into index.html --config lasso.json && sass assets/styles.scss assets/styles.css"
+    "build": "lasso --main app.js --inject-into index.html --config lasso.json && sass assets/styles.scss assets/styles.css",
+    "test": "mocha --require @babel/register"
   },
   "author": "Moriko17",
   "license": "GPL",
   "dependencies": {
     "@babel/core": "^7.6.3",
     "@babel/preset-env": "^7.6.3",
+    "@babel/register": "^7.6.2",
     "axios": "^0.19.0",
+    "chai": "^4.2.0",
     "lasso": "^3.3.1",
     "lasso-babel-transform": "^3.0.0",
     "lasso-cli": "^2.0.11",
     "lasso-marko": "^2.4.8",
     "lasso-sass": "^3.0.0",
-    "sass": "^1.23.0"
+    "mocha": "^6.2.2",
+    "sass": "^1.23.0",
+    "sinon": "^7.5.0"
   }
 }
