--- a/package.json
+++ b/package.json
@@ -5,7 +5,18 @@
   "main": "app.js",
   "scripts": {
     "build": "lasso --main app.js --inject-into index.html --config lasso.json && sass assets/styles.scss assets/styles.css",
-    "test": "mocha --require @babel/register"
+    "test": "cross-env NODE_ENV=test nyc mocha --require @babel/register --exit"
+  },
+  "nyc": {
+    "require": [
+      "@babel/register"
+    ],
+    "reporter": [
+      "lcov",
+      "text"
+    ],
+    "sourceMap": false,
+    "instrument": false
   },
   "author": "Moriko17",
   "license": "GPL",
@@ -14,13 +25,16 @@
     "@babel/preset-env": "^7.6.3",
     "@babel/register": "^7.6.2",
     "axios": "^0.19.0",
+    "babel-plugin-istanbul": "^5.2.0",
     "chai": "^4.2.0",
+    "cross-env": "^6.0.3",
     "lasso": "^3.3.1",
     "lasso-babel-transform": "^3.0.0",
     "lasso-cli": "^2.0.11",
     "lasso-marko": "^2.4.8",
     "lasso-sass": "^3.0.0",
     "mocha": "^6.2.2",
+    "nyc": "^14.1.1",
     "sass": "^1.23.0",
     "sinon": "^7.5.0"
   }
